# ChangeLog for media-sound/beets
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/beets/ChangeLog,v 1.13 2013/04/06 23:56:35 sochotnicky Exp $

*beets-1.1.0_beta3 (06 Apr 2013)

  06 Apr 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +files/0001-fix-VFS-tests.patch, -beets-1.0_rc2.ebuild,
  +beets-1.1.0_beta3.ebuild:
  Bump media-sound/beets to 1.1.0_beta3, remove old version

  Updated dependencies on more recent mutagen and python-musicbrainz-ngs

  20 Feb 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org> beets-1.0.0.ebuild:
  Fix up test patching for stable version

*beets-1.0.0 (19 Feb 2013)

  19 Feb 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  -beets-1.0_beta15.ebuild, +beets-1.0.0.ebuild:
  Version bump to latest stable release

  03 Jan 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +files/beets-1.0_rc2-test-namespace.patch, beets-1.0_rc2.ebuild:
  Properly fix tests failing during update (#422685)  We'd accidentally use
  beetsplug modules from previous version when doing updates due to beets using
  python namespaces (and portage not supporting them correctly).  Thanks to
  Arfrever for help with finding the root cause and proposing a fix

*beets-1.0_rc2 (02 Jan 2013)

  02 Jan 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  -beets-1.0_beta14-r1.ebuild, +beets-1.0_rc2.ebuild, metadata.xml:
  Version bump to 1.0_rc2, small ebuild cleanups

  Thanks to Elias Probst for updated ebuild

*beets-1.0_beta15 (21 Aug 2012)

  21 Aug 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +beets-1.0_beta15.ebuild:
  Version bump to 1.0b15

  30 May 2012; Kacper Kowalik <xarthisius@gentoo.org>
  beets-1.0_beta14-r1.ebuild:
  Enable test, restrict python 2.5, add correct dependencies

  29 May 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  -beets-1.0_beta14.ebuild, beets-1.0_beta14-r1.ebuild:
  Install manpage (#418163) and optionally documentation. Remove first