@@ -1,28 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX 0001-fix-VFS-tests.patch 995 SHA256 301d99bd1cce55dd23c6a9d4cc4850fd9ccdbe0345105dc6bb498ec267f286a2 SHA512 40a818564b514b5c7f886fb5455f027b3b92ada4593dcdf57ea55a80c89a4d958b1ccd85fd4d253bf9c089c3414036c7f8986f04608fb9e5fc90b76d173b79f2 WHIRLPOOL 1ae8d796be90fbafb94ba88d3c4a1791b77ffaf8b9de00bd70394bfa74abad224e04318a8739304dd864b41a624d656c15c55e75f7932a36df616ecdf9175cf6
-AUX beets-1.0_rc2-test-namespace.patch 418 SHA256 7d4d901ddda7077139664210857ba7c01b063ae0ff4241b9d56eed4e5d871635 SHA512 d76a39674dfe867d3ac3a0e9df365da23ed5398f4ae64abffbf58863116bd0aa5d92f4c83de85668231bdeb073a91e3566385ea637dea798b82099e292dc0ec8 WHIRLPOOL 6e03070751dc60590c7443522a0b4871e30e23c2779b2a8a7989b91b168f6afbae9a0f411f2f805dc2e360c34cc7f945f8a9c91e7e41222b4fdd29f89ade5955
 DIST beets-1.0.0.tar.gz 532807 SHA256 ee782a1e1879a335fae6b9f381cb2ae5bc78fc7c35836014b75c811105ea0ab3 SHA512 7149610a7d224dc7afae17f7e6da647910e483fe73a991dac75fd0bf3fccd3bec5aee72d96b29399c9476a92eb79ea6dfb71c6b2636cdd893b9309e1f61dedbc WHIRLPOOL cc607cf881c934a82abbc77d98d008f7dfb444ada9d731671bd0b5e783810b3bb7017d482e520c6070b1eef8fa07b0a4f30a81548e4b42ba3a4599be252f3bb2
-DIST beets-1.1.0-beta.3.tar.gz 593985 SHA256 0f9f4d957fcf4744110885e7ed897c862287551a89bfd13463ad5259e8d30897 SHA512 e466d0820805a07150448b844ba7dbcf328c2c28d33b5586bd7404183279b90764c928039b1832c517fb78bd9c43c21d55f8a40a7f84f7f3730125f721b88621 WHIRLPOOL db8d879bd4e24697b346df8a80298ffd7130d698025bf34a297a692c94431195ea2fd6664037629ce624e8fb88dcd65f8c4a812eee9100d9e9f44bc8ddc7567a
+DIST beets-1.1.0.tar.gz 600175 SHA256 5355345ba062b5969f18ca2d7818026ac74f2a07bfe733354b9a3d3c19918b97 SHA512 5d67d995bde87ed2f5bb556d9390acde2d9855cf4f34a3b88527895ad3cd214a7069ed2f87d539885cc0053950fce208322e53ae6e6b1617d719dbfba5de0798 WHIRLPOOL b53c258ad681853d6737e7ff1aa1c282dbe5d99d2a35d27270d20fd1fa682250bfe90d7af185a1c6bc429075472c0f82712ee837591224ac3bc1dc1cd2967d53
 EBUILD beets-1.0.0.ebuild 2316 SHA256 e7ba4b966d72fb4231b5e9045461323b55553683a26d947f977d7018de68bbb3 SHA512 5e092c0331ff26d2960c2fba0a0ce3844a5de07be6584526955d315fa1810da6c281afa6c921a1da0be4555f6b63d405805925fe3d7f6558207aa649cde23228 WHIRLPOOL e5ac05755c9e244dc2d97c07389fabf69ef3cda64846764df276388e3c294db4ec1de93d236e6793409db807ea44a99c2760cc5592e0f533d8151730b01d6dad
-EBUILD beets-1.1.0_beta3.ebuild 2423 SHA256 c79e70c2dc37e546a420a0167ae529015736b030d85430e6a0bb16042630d34c SHA512 38208ab62c6a6ae82b88bda85859d6519ba28b3d7abd3fe9fc91e931b3f374ca4349fd663fbb4e58867de56c3c0a880098d76196b75cbe15d46e80f175ac2b20 WHIRLPOOL e8bb043cab7073b315402673671987c8b455590e5787e10049ac80a53f9af4850d8f4d8633a8e15acd75cf6172f2975bf7792a9749573b1d959c14df34be11ae
-MISC ChangeLog 2713 SHA256 fe58b22c2875223c3f380e188c9a8204f52a581c6f98666fc47d0a78186753bc SHA512 421af5b08ce26f69b7d79969ee4c26960cdbbeb41b54a3ea9ea527f2c18459fad1568393a3f434df693325bcab56f59a128f89314d07755bf18e62667278196d WHIRLPOOL 29388c9083153a00c9f57c343c13acdfc97b5544355a2adf7821cb11e1509f4597e82da324cb5489c7c3b4799e770dcc82d0d5efbca82b3a5bd0d65b8ce5eed8
+EBUILD beets-1.1.0.ebuild 2080 SHA256 6c7448cfb0f63ae73c4fc8bb1b0c2eaa5f6dc17753e76fb634f5f5b3553eec75 SHA512 0f0193d10e3961b5a2c2d6f070fa92f1bd2d5dc73719bd1fe02d68cb8ef0a8011cf3efdb693814bc5c7912d3044e6a84cf0206f046b5a27e990c46a8b51c879d WHIRLPOOL 0148360c3683cfb52e1fba9d3479a7c0f10da855b7ab6520e95962ea33b9ee7d7ea260778d222c953cabbe787d5ecb57250909ea3ad2ed796560e3060ac414d5
+MISC ChangeLog 2990 SHA256 58434bdd916994e345f7b3c8cc791316de24a9ae59dfd34185114a4212007599 SHA512 306e7ffb230dbbf3785fa37762ce5b6f950785d25fa5505049b2d6b8c7781c9bffbdbf7b2aa4636e4754e0d6835193edb7bbbeac762f627511460a9a6d42fac2 WHIRLPOOL 4c4d453eca4ffab89e7c741e67f345b7e244cbe81365185510703d7efcd866c137357400430029aacfe9dcfd9c6c6a5acdc02bf6ff8bb241fc128c55e9344649
 MISC metadata.xml 2143 SHA256 08635999d29fa0496674c211c17671e32c392180f6f4432209797d5545a2df1e SHA512 a2ac8b557dcf75764e0b0076525a1b78dfc7101391ae7bd0d9dacb4cd0ff5f95683a030e1f8b98e12cdefd37559150472ecd39461ca7496166fcfc8fea540169 WHIRLPOOL 41755f3c2c447c73ec09327b50703d3f941f8316f95ef45faac3c61b7b3a39909711b3d494361e6c3b6dbb73be13385e1e85158f506171ba69c7a35b928905b1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRYLY6AAoJELy9dS57CHJB9ywQAJnqieE8SdigDP2r/4N0NsGS
-EZNMJOucLg8aRftZES5FhR+TBd/FM7KUQgH+opwLGqgBv0lDC//jhu/r/zF/8bjG
-OsBsfghmRSF0nNrOKhW8r8iVZUUNbRWeUh9IejaGWVEpDSZbhcCsmfPn2pKNUWfp
-NYp4Qf0yaZ8UPCGbrrtA88/eDXoI88SzC33M+jMG10pG1iCDsqyYwrdb4bt0UxYm
-BQ9ZbPuKwjRmvd9MeRvsldJGbKEp/O9gpXsWpb66+rlNPJPSQgIuCAl10g8O0YPy
-eUOFPupLUfGKNZRUEUM9JHGXCZX7+BYZoCliYtdXAn4b9DIoDYPDWwu/cDcm/6bK
-f3QgJdXuCWXACtmcEHp0vB+/4sXm0jnMf6mTxiqPhZAaLyUI62KL/IU5Kigi2DcI
-N9YvIgbEXXT1xLq79HRVDvXEP1tabAKTK2HnDt/tFHdBEvgb4teJdm3GVHeKkC4m
-JhczSUi3MR1nfq3J6m2cgEHIO+w/RUqQLr168FE0Tw+NfpgU6K1vVlood32DXMCG
-KwxhIYhBN1Y7BkcIXxswB6pzyK8gTx9p/VkPDF+MpFcdhT9JiIjtUu+SY9M1bRqN
-yV9gQyJntsYJcxBG/3uikHv1VM1jIuWiaVNNVXRaCLyFEgMaZIh/iikzWUXYteYf
-5Bqum9Bge0KnYnbmeNV8
-=IsE7
+iQIcBAEBCAAGBQJRs19vAAoJELy9dS57CHJBKHcQAOTQAvbL7HiqJs7tTBgw5o1Y
+ryfmSIPjul5gnKdN/5cLQj2gBWKNA8hvNePyyVtKR08QDK9FH50hmONXuWvHkm8M
+hNmod0zZGQQ/6tfxZmEB6zKV+q4S3LPOfRshXE1VM5+LJTI3910nyXNVJ8eVTtYf
++fXsv3t0bEwYzZOMfDjH5D+14dNXUDXvXLMx15DP2f17Si3TwLkhqsr0FSf2OV2F
+8VonyHB8UQepg9oDOJfNK7+Ucbnf/vudhXpf8bE2AYPD+SiMYfhtjATIqdPH6A/+
+ztue+To2KFK+y2kyFgegA4LnMha3yMfvyXOTQrbeRNhLEDjrnu5HR7P603WW2Ggg
++EyPXecqwco1koPVWZGbQmw+vGJdCh7F+t2hXAIugjdqu054sS4pBfQrXHnjWdK0
+Am4pe7q4igpxdObKAxvDaPU4puWB3LZNugWhHJ6kb9i/cGP4L3UKbf9wng5ltTvY
+QlziecQIFDQy6doSoHajDDmxiPT0vu8hh1GooBY1/i6gzKm60NV9btzq4TgYrqGt
+7wbsTX/LfJ9jp3pIMVeXbfhCXodjtYRwm5eciIKUpT9NicAmXnk6/4BWyiTgW/jk
+EmvVUkWdkNCpKF4jZIFoJyKE2FGGi+mAAUJQY12yKtKt77qltXPyBxkKey786olg
+8ZmkW6dIph03N3BDVSIm
+=tm+W
 -----END PGP SIGNATURE-----
