@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/beets
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/beets/ChangeLog,v 1.13 2013/04/06 23:56:35 sochotnicky Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/beets/ChangeLog,v 1.14 2013/06/08 16:44:19 sochotnicky Exp $
+
+*beets-1.1.0 (08 Jun 2013)
+
+  08 Jun 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
+  -beets-1.1.0_beta3.ebuild, +beets-1.1.0.ebuild,
+  -files/0001-fix-VFS-tests.patch, -files/beets-1.0_rc2-test-namespace.patch:
+  Version bump from beta, remove patches included upstream
 
 *beets-1.1.0_beta3 (06 Apr 2013)
 
